Refactor environment variables and gitignore files

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
-SECRET=random-secret-string
-NEXTAUTH_URL='http://localhost:3000'
 
 # Environment variables for NextAuth and Email configuration
-EMAIL_SERVER=smtp://123:123@smtp.mailjet.com:587
-EMAIL_FROM=signin@tickget.app
+EMAIL_SERVER="smtp://username:password@mailserver.com:587"
