misc ui changes

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.5.4",
     "leaflet": "^1.9.4",
