add confetti lol

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-countdown": "^2.3.6",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-dom-confetti": "^0.2.0",
     "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
     "sonner": "^1.5.0",
