--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
+    "vercel": "^39.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
