--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
+    "notion-client": "^7.1.4",
     "pnpm": "^9.9.0",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
@@ -59,6 +60,8 @@
     "react-dom-confetti": "^0.2.0",
     "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
+    "react-notion": "^0.10.0",
+    "react-notion-x": "^7.2.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
