create migration scripts for sheets data

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.5.4",
+    "googleapis": "^144.0.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
