--- a/package.json
+++ b/package.json
@@ -34,9 +34,15 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tabler/icons-react": "^3.14.0",
     "@tanstack/react-table": "^8.20.5",
+    "@vercel/fun": "^1.1.2",
+    "@vercel/node": "^2.10.3",
+    "@vercel/redwood": "^2.1.12",
+    "@vercel/routing-utils": "^4.0.0",
+    "@vercel/static-build": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookie": "^1.0.2",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
@@ -46,17 +52,18 @@
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
-    "next": "14.2.8",
+    "next": "^14.2.23",
     "next-auth": "^4.24.7",
     "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "notion-client": "^7.1.4",
+    "path-to-regexp": "^8.2.0",
     "pnpm": "^9.9.0",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-countdown": "^2.3.6",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -64,12 +71,14 @@
     "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
     "react-notion": "^0.10.0",
-    "react-notion-x": "^7.2.4",
+    "semver": "^7.6.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tar": "^7.4.3",
+    "undici": "^7.3.0",
     "vaul": "^1.1.1",
-    "vercel": "^39.1.0",
+    "vercel": "^32.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
