--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
     "react-notion": "^0.10.0",
+    "react-notion-x": "^7.2.6",
     "semver": "^7.6.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
