--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tabler/icons-react": "^3.14.0",
     "@tanstack/react-table": "^8.20.5",
+    "@vercel/blob": "^0.27.1",
     "@vercel/fun": "^1.1.2",
     "@vercel/node": "^2.10.3",
     "@vercel/redwood": "^2.1.12",
