add travel reimburesement form and refactor sign out

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "scripts/fromsheets.js"
+    "scripts/fromsheets.js",
+    "app/reimbursement",
+    "app/reimbursement"
   ],
   "exclude": ["node_modules"]
 }
