--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.9",
     "@types/next-auth": "^3.15.0",
