--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vercel/redwood": "^2.1.12",
     "@vercel/routing-utils": "^4.0.0",
     "@vercel/static-build": "^1.2.1",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -48,6 +49,7 @@
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "fast-levenshtein": "^3.0.0",
     "framer-motion": "^11.5.4",
     "googleapis": "^144.0.0",
     "leaflet": "^1.9.4",
@@ -65,7 +67,9 @@
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-countdown": "^2.3.6",
+    "react-datepicker": "^8.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dom-confetti": "^0.2.0",
@@ -84,6 +88,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/fast-levenshtein": "^0.0.4",
     "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.9",
